@@ -163,6 +163,9 @@ Extension Modules
 Library
 -------
 
+- Patch #815924: Restore ability to pass type= and icon= in tkMessageBox
+  functions.
+
 - Patch #812986: Update turtle output even if not tracing.
 
 - Patch #1494750: Destroy master after deleting children in 
